# mmcurses

./: CMakeLists.txt  Doxyfile  README.md  test_mmcurses.cc  test_mmcurses_application.cc
examples/: mmcurses_application_example1.cc  mmcurses_application_example2.cc  mmcurses_widget_application_example1.cc  mmcurses_widget_application_example2.cc  mmcurses_widget_application_example3.cc
mmcurses/: application.h  widget_application.h
src/: application.cc
src/mmcurses/: application.h  event.h  geometry.h  no_copy.h  render_buffer.h  rows.h  widget.h  widget_application.h
src/mmcurses/widget/: base.h  columns.h  constant.h  grid.h  label.h  rows.h
